who stole my insta profile? kjjj

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <span style="display:block;"><i class="fas fa-map-marker-alt"></i> &nbsp;&nbsp; Rafaela, Santa Fe</span>
                 <span style="display:none;"><i class="fas fa-user-tie"></i> &nbsp;&nbsp; Available for hire</span>
                 <div class="socials">
-                <span ><a href="https://www.instagram.com/lucasvazq" target="_blank" class="socials"><i class="fab fa-instagram"></i> &nbsp;&nbsp; Take a look</a></span>
+                <span ><a href="https://www.instagram.com/lucass.vazq" target="_blank" class="socials"><i class="fab fa-instagram"></i> &nbsp;&nbsp; Take a look</a></span>
                 </div>
                 </div>
     </div>
