🍱 update cushead files

--- a/cushead/index.html
+++ b/cushead/index.html
@@ -10,12 +10,12 @@
     <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin="anonymous">
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({"gtm.start":new Date().getTime(),event:"gtm.js"});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!="dataLayer"?"&l="+l:"";j.async=true;j.src="https://www.googletagmanager.com/gtm.js?id="+i+dl;f.parentNode.insertBefore(j,f);})(window,document,"script","dataLayer","GTM-NGGH6LK");</script>
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-    <title>Sample</title>
+    <title>cushead</title>
     <meta name="theme-color" content="#ffffff">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="mobile-web-app-capable" content="yes">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/cushead/favicon.ico">
     <link rel="icon" sizes="16x16" type="image/png" href="/cushead/static/favicon-16x16.png">
     <link rel="icon" sizes="32x32" type="image/png" href="/cushead/static/favicon-32x32.png">
     <link rel="icon" sizes="96x96" type="image/png" href="/cushead/static/favicon-96x96.png">
@@ -41,30 +41,30 @@
     <meta name="yandex-tableau-widget" content="logo=/cushead/static/yandex.png, color=#ffffff">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://sample.com">
-    <meta property="og:site_name" content="Sample">
-    <meta property="og:title" content="Sample">
-    <meta property="og:description" content="We do things">
+    <meta property="og:url" content="https://lucasvazq.github.io/cushead/">
+    <meta property="og:site_name" content="cushead">
+    <meta property="og:title" content="cushead">
+    <meta property="og:description" content="example">
     <meta property="og:image" content="/cushead/static/preview-600x600.png">
     <meta property="og:image:secure_url" content="/cushead/static/preview-600x600.png">
     <meta property="og:image:width" content="600">
     <meta property="og:image:height" content="600">
     <meta property="og:image:type" content="image/png">
-    <meta property="og:image:alt" content="Sample - We do things">
+    <meta property="og:image:alt" content="cushead - example">
     <meta property="og:image" content="/cushead/static/preview-1080x1080.png">
     <meta property="og:image:secure_url" content="/cushead/static/preview-1080x1080.png">
     <meta property="og:image:width" content="1080">
     <meta property="og:image:height" content="1080">
     <meta property="og:image:type" content="image/png">
-    <meta property="og:image:alt" content="Sample - We do things">
+    <meta property="og:image:alt" content="cushead - example">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@sample">
+    <meta name="twitter:site" content="@cushead">
     <meta name="twitter:site:id" content="123456">
-    <meta name="twitter:title" content="Sample">
-    <meta name="twitter:description" content="We do things">
+    <meta name="twitter:title" content="cushead">
+    <meta name="twitter:description" content="example">
     <meta name="twitter:image" content="/cushead/static/preview-600x600.png">
-    <meta name="twitter:image:alt" content="Sample - We do things">
-    <meta name="twitter:creator" content="@sample">
+    <meta name="twitter:image:alt" content="cushead - example">
+    <meta name="twitter:creator" content="@cushead">
     <meta property="twitter:creator:id" content="123456">
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'" crossorigin="anonymous">
     <noscript>
@@ -104,29 +104,29 @@
     <link rel="apple-touch-startup-image" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/cushead/static/apple-touch-startup-image-1334x750.png">
     <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portarit)" href="/cushead/static/apple-touch-startup-image-640x1136.png">
     <link rel="apple-touch-startup-image" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" href="/cushead/static/apple-touch-startup-image-1136x640.png">
-    <link rel="manifest" href="/cushead/static/manifest.json">
-    <meta name="application-name" content="Sample">
+    <link rel="manifest" href="/cushead/manifest.json">
+    <meta name="application-name" content="cushead">
     <meta name="msapplication-config" content="/cushead/static/browserconfig.xml">
-    <meta name="apple-mobile-web-app-title" content="Sample">
+    <meta name="apple-mobile-web-app-title" content="cushead">
     <link rel="mask-icon" color="#ff0000" href="/cushead/static/mask-icon.svg">
-    <link rel="search" type="application/opensearchdescription+xml" title="Sample" href="/cushead/static/opensearch.xml">
-    <meta name="description" content="We do things">
+    <link rel="search" type="application/opensearchdescription+xml" title="cushead" href="/cushead/static/opensearch.xml">
+    <meta name="description" content="example">
     <meta name="subject" content="Home Page">
     <script type="application/ld+json">
       {
         "@context": "http://schema.org/",
         "@type": "Organization",
-        "@id": "https://sample.com",
-        "url": "https://sample.com",
-        "slogan": "We do things",
-        "description": "We do things",
+        "@id": "https://lucasvazq.github.io/cushead/",
+        "url": "https://lucasvazq.github.io/cushead/",
+        "slogan": "example",
+        "description": "example",
         "logo": "/cushead/static/preview-600x600.png",
         "image": "/cushead/static/preview-600x600.png"
       }
     </script>
     <meta name="robots" content="index, follow">
     <meta name="google-site-verification" content=""> <!-- FILL THIS -->
-    <meta name="author" content="/humans.txt">
+    <meta name="author" content="/cushead/humans.txt">
   </head>
   <body>
     <noscript>
@@ -136,7 +136,7 @@
     <script async src="/cushead/static/late_script.js"></script>
     <script>
       if ("serviceWorker" in navigator && !navigator.serviceWorker.controller) {
-        navigator.serviceWorker.register("/sw.js", { scope: "/" });
+        navigator.serviceWorker.register("/cushead/sw.js", { scope: "/cushead/" });
       }
     </script>
   </body>
