🎨 align the paragraph to the center

--- a/cushead/index.html
+++ b/cushead/index.html
@@ -133,7 +133,7 @@
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NGGH6LK" height="0" width="0" style="display:none;visibility:hidden"></iframe>
     </noscript>
     <h1>Hello World!</h1>
-    <p>(view-source 😉)</p>
+    <p style="text-align: center">(view-source 😉)</p>
     <script async src="/cushead/static/late_script.js"></script>
     <script>
       if ("serviceWorker" in navigator && !navigator.serviceWorker.controller) {
